--- a/menu2.css
+++ b/menu2.css
@@ -62,3 +62,12 @@ header{
     font-size: xx-large;
 
 }
+.mm a  button{
+    width: 100px;
+    background-color:bisque;
+    height: 40px;
+}
+.mm a{
+    display: flex;
+    justify-content: center;
+}
